[package]
name = "nightly-tools"
version = "0.1.0"
authors = ["Patrick Mooney <pmooney@pfmooney.com>"]
edition = "2018"

[[bin]]
name = "find_elf"

[dependencies]
structopt = { version = "0.3", default-features = false }
libc = "0.2"
goblin = { version = "0.2", features = ["std", "elf32", "elf64"] }
