[package]
name = "check_rtime"
version = "0.1.0"
authors = ["Patrick Mooney <pmooney@pfmooney.com>"]
edition = "2018"
license = "CDDL-1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3", default-features = false }
libc = "0.2"
goblin = { version = "0.4", features = ["std", "elf32", "elf64"] }
utils = { path = "../utils" }
regex = "1.5"
lazy_static = "1.4"
tempfile = "3.2"
