[package]
name = "find_elf"
version = "0.1.0"
authors = ["Patrick Mooney <pmooney@pfmooney.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3", default-features = false }
libc = "0.2"
goblin = { version = "0.4", features = ["std", "elf32", "elf64"] }
utils = { path = "../utils" }
